Made Hero Carousel on Index Page Mobile Responsive.

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -163,7 +163,7 @@
               <div class="card-up info-color"></div>
               <!--Avatar-->
               <div class="avatar mx-auto white">
-                <img src="../img/MichaelEaganAvatar.jpg" class="rounded-circle img-fluid">
+                <img src="../img/Testimonials/MichaelEaganAvatar.jpg" class="rounded-circle img-fluid">
               </div>
               <div class="card-body">
                 <!--Name-->
@@ -191,7 +191,7 @@
               </div>
               <!--Avatar-->
               <div class="avatar mx-auto white">
-                <img src="../img/Laura.jpg" class="rounded-circle img-fluid">
+                <img src="../img/Testimonials/Laura.jpg" class="rounded-circle img-fluid">
               </div>
               <div class="card-body">
                 <!--Name-->
@@ -218,7 +218,7 @@
               <div class="card-up indigo"></div>
               <!--Avatar-->
               <div class="avatar mx-auto white">
-                <img src="../img/Vickie.jpg" class="rounded-circle img-fluid">
+                <img src="../img/Testimonials/Vickie.jpg" class="rounded-circle img-fluid">
               </div>
               <div class="card-body">
                 <!--Name-->
@@ -243,7 +243,7 @@
               <div class="card-up info-color"></div>
               <!--Avatar-->
               <div class="avatar mx-auto white">
-                <img src="../img/Lou.jpg" class="rounded-circle img-fluid">
+                <img src="../img/Testimonials/Lou.jpg" class="rounded-circle img-fluid">
               </div>
               <div class="card-body">
                 <!--Name-->
@@ -266,7 +266,7 @@
               </div>
               <!--Avatar-->
               <div class="avatar mx-auto white">
-                <img src="../img/Gabrielle.jpg" class="rounded-circle img-fluid">
+                <img src="../img/Testimonials/Gabrielle.jpg" class="rounded-circle img-fluid">
               </div>
               <div class="card-body">
                 <!--Name-->
@@ -288,7 +288,7 @@
               <div class="card-up indigo"></div>
               <!--Avatar-->
               <div class="avatar mx-auto white">
-                <img src="../img/Nathaniel.jpg" class="rounded-circle img-fluid">
+                <img src="../img/Testimonials/Nathaniel.jpg" class="rounded-circle img-fluid">
               </div>
               <div class="card-body">
                 <!--Name-->
