--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -88,7 +88,7 @@
         <div class="flex-container services__container">
             <div class="row">
                 <div class="col-md">
-                    <img src="../img/services-img-1.jpg"/>
+                    <img src="../img/Services Cards/services-img-1.jpg"/>
                 </div>
                 <div class="col-md services-card__text">
                     <h3 class="services-card__text-title">Dog Walking</h3>
@@ -115,13 +115,13 @@
                     <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drop-By Visit</p>
                 </div>
                 <div class="col-md">
-                    <img src="../img/services-img-2.jpg"/>
+                    <img src="../img/Services Cards/services-img-2.jpg"/>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md">
-                    <img src="../img/services-img-3.jpg"/>
+                    <img src="../img/Services Cards/services-img-3.jpg"/>
                 </div>
                 <div class="col-md services-card__text">
                     <h3 class="services-card__text-title">Other Critters</h3>
