--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         <div id="heroCarousel" class="carousel slide hero-carousel__wrapper" data-ride="carousel" data-interval="6000" data-pause="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-1.jpg" alt="Calico cat laying on the ground playing with a toy.">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-img carousel-img-1"></div>
+              <div class="carousel-caption d-md-block">
                 <div class="hero-carousel__title">
                   <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
                 </div>
                 <div class="hero-carousel__paw-divider">
-                  <img src="img/paw-slider.png" alt=""/>
+                  <img src="img/Icons/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
                   <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
@@ -78,13 +78,13 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-2.jpg" alt="Small puppy playing tug-of-war with a white knotted rope.">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-img carousel-img-2"></div>
+              <div class="carousel-caption d-md-block">
                 <div class="hero-carousel__title">
                   <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
                 </div>
                 <div class="hero-carousel__paw-divider">
-                  <img src="img/paw-slider.png" alt=""/>
+                  <img src="img/Icons/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
                   <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
@@ -92,13 +92,13 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-3.jpg" alt="Orange and green bird in a cage.">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-img carousel-img-3"></div>
+              <div class="carousel-caption d-md-block">
                 <div class="hero-carousel__title">
                   <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
                 </div>
                 <div class="hero-carousel__paw-divider">
-                  <img src="img/paw-slider.png" alt=""/>
+                  <img src="img/Icons/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
                   <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md in-home-care__text">
               <div class="d-flex justify-content-center in-home-care__text-dog-photo">
-                <img src="img/dog.png" alt="A cartoon image of a blue dog sitting on his hind legs."/>
+                <img src="img/Icons/dog.png" alt="A cartoon image of a blue dog sitting on his hind legs."/>
               </div>
               <div class="d-flex justify-content-center in-home-care__text-title">
                 <h3>Experienced, In-Home care for your pets</h3>
@@ -159,7 +159,7 @@
             <div class="row">
               <div class="col-md">
                 <div class="d-flex justify-content-center">
-                  <img src="img/pets-hotel-house-sign-with-a-paw.png" alt="Pet Hotel icon with a paw"/>
+                  <img src="img/Icons/pets-hotel-house-sign-with-a-paw.png" alt="Pet Hotel icon with a paw"/>
                 </div>
                 <h4 class="services__service-title">Dog Walking</h4> 
                 <p class="services__service-text">
@@ -171,7 +171,7 @@
               </div>
               <div class="col-md">
                 <div class="d-flex justify-content-center">
-                  <img src="img/walking-the-dog-1.png" alt="Icon showing a person walking a dog."/>
+                  <img src="img/Icons/walking-the-dog-1.png" alt="Icon showing a person walking a dog."/>
                 </div>
                 <h4 class="services__service-title">Pet Sitting</h4> 
                 <p class="services__service-text">
@@ -183,7 +183,7 @@
               </div>
               <div class="col-md">
                 <div class="d-flex justify-content-center">
-                  <img src="img/bunny-icon.png" alt="An icon showing the outline of a bunny"/>
+                  <img src="img/Icons/bunny-icon.png" alt="An icon showing the outline of a bunny"/>
                 </div>
                 <h4 class="services__service-title">Other Critters</h4> 
                 <p class="services__service-text">
