--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- navbar defines this as a Bootstrap navbar, navbar-expand-lg
             makes it collapse into a hamburger icon on smaller screens -->
         <nav class="navbar fixed-top navbar-expand-lg bg-transparent navbar-light">
-            <a class="navbar-brand" href="../index.html">Happy Tales</a>
+            <a class="navbar-brand" href="../index.html">Happy Tales Pet Care</a>
             <!--This is the code for the toggler. data-target and aria-controls
                 must be equal to the navigation list's div id. -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color:white;">
@@ -144,9 +144,6 @@
                   Even if you have a pet that you can't get traditionally boarded, you can feel comfortable leaving your family at home knowing they are going to be loved and well taken care of.
                 </p>
               </div>
-              <div class="d-flex justify-content-center in-home-care__button">
-                <a href="html/aboutus.html" class="bttn-float bttn-lg bttn-jumbo">About Us</a>
-              </div>
             </div>
           </div>
         </div>
@@ -169,7 +166,7 @@
                   <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
                 </div>
               </div>
-              <div class="col-md">
+              <div class="col-md service-2">
                 <div class="d-flex justify-content-center">
                   <img src="img/Icons/walking-the-dog-1.png" alt="Icon showing a person walking a dog."/>
                 </div>
@@ -181,7 +178,7 @@
                   <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
                 </div>
               </div>
-              <div class="col-md">
+              <div class="col-md service-3">
                 <div class="d-flex justify-content-center">
                   <img src="img/Icons/bunny-icon.png" alt="An icon showing the outline of a bunny"/>
                 </div>
@@ -296,33 +293,34 @@
         <!-- END OF WHy Choose-->
 
         <!-- Gallery -->
+        <!-- Gallery DESKTOP-->
         <h3 class="gallery__title">Our Friends</h3>
         <div class="flex-container gallery__container">
           <div class="row">
-            <div class="col-md mt-5 ml-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home_1_Bonnie.jpg" alt="Black and white female cat looking at camera."/>
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mt-5 d-flex justify-content-center">
+              <img src="img/Gallery/Home_1_Bonnie.jpg" alt="Black and white female cat looking at the camera."/>
             </div>
-            <div class="col-md mt-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mt-5 d-flex justify-content-center">
               <img src="img/Gallery/Home_2_Fritzy.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
             </div>
-            <div class="col-md mt-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mt-5 d-flex justify-content-center">
               <img src="img/Gallery/Home_3_Cooper.jpg" alt="Old male labrador looking at the camera."/>
             </div>
-            <div class="col-md mt-5 mr-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mt-5 d-flex justify-content-center">
               <img src="img/Gallery/Home_4_Velvet.jpg" alt="Female pointer dog playing with a red ball."/>
             </div>
           </div>
           <div class="row">
-            <div class="col-md mt-5 ml-5 mb-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6  col-md-6 col-sm-12 mt-5 mb-5 d-flex justify-content-center">
               <img src="img/Gallery/Home_5_Cookie.jpg" alt="Female pit mix smiling happily."/>
             </div>
-            <div class="col-md mt-5 mb-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6  col-md-6 col-sm-12 mt-5 mb-5 d-flex justify-content-center">
               <img src="img/Gallery/Home_6_Samson.jpg" alt="Male Great Pyrenees dog sitting in the snow."/>
             </div>
-            <div class="col-md mt-5 mb-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6  col-md-6 col-sm-12 mt-5 mb-5 d-flex justify-content-center">
               <img src="img/Gallery/Home_7_Cody.jpg" alt="Male Golden-Doodle smiling for the camera."/>
             </div>
-            <div class="col-md mt-5 mr-5 mb-5 d-flex justify-content-center">
+            <div class="col-xl-3 col-lg-6  col-md-6 col-sm-12 mt-5 mb-5 d-flex justify-content-center">
               <img src="img/Gallery/Home__8_Cat.jpg" alt="Young kitten staring curiously."/>
             </div>
           </div>
@@ -330,6 +328,50 @@
             <a href="html/gallery.html" class="bttn-float bttn-lg bttn-jumbo">Go To Gallery</a>
           </div>
         </div>
+        <!-- END OF Gallery DESKTOP-->
+        <!-- Gallery MOBILE-->
+        <div class=" flex-container gallery__container-mobile">
+          <div id="galleryControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img/Gallery/Home_1_Bonnie.jpg" alt="Black and white female cat looking at the camera.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home_2_Fritzy.jpg" alt="Gray-Brown, small male dog smiling at the camera.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home_3_Cooper.jpg" alt="Old male labrador looking at the camera.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home_4_Velvet.jpg" alt="Female pointer dog playing with a red ball.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home_5_Cookie.jpg" alt="Female pit mix smiling happily.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home_6_Samson.jpg" alt="Male Great Pyrenees dog sitting in the snow.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home_7_Cody.jpg" alt="Male Golden-Doodle smiling for the camera.">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/Gallery/Home__8_Cat.jpg" alt="Young kitten staring curiously.">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#galleryControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#galleryControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="d-flex justify-content-center gallery-button">
+            <a href="html/gallery.html" class="bttn-float bttn-lg bttn-jumbo">Gallery</a>
+          </div>
+        </div>
+        <!--END OF Gallery MOBILE-->
         <!-- END OF Gallery-->
 
         <!-- Ready To Join-->
