--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -141,8 +141,8 @@
         <!-- END OF Social Section-->
 
         <!-- Testimonials-->
-            <!-- Section: Testimonials v.1 -->
-        <section class="text-center" id="testimonials">
+        <!-- Testimonials DESKTOP-->
+        <section class="text-center testimonial__container" id="testimonials">
         <!-- Section heading -->
             <h2 id="carousel-title" class="h2-responsive font-weight-bold mt-5 pb-0 card-title">
                 What Our <span style="font-family:'Dancing Script', cursive; color: var(--mainBlue);">Friends</span> Have To Say
@@ -313,6 +313,140 @@
       </a>
      </div>
      </section>
+        <!-- END OF Testimonials DESKTOP-->
+        <!-- Testimonials MOBILE-->
+        <div class=" flex-container testimonial__container-mobile">
+          <div id="galleryControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="card " style="transform:translate(0,0);">
+                  <!--Background color-->
+                  <div class="card-up indigo"></div>
+                  <!--Avatar-->
+                  <div class="avatar mx-auto white">
+                    <img src="../img/Testimonials/Nathaniel.jpg" class="rounded-circle img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <!--Name-->
+                    <h4 class="font-weight-bold mb-4" style="color:var(--mainBlue);">Nathaniel Grimsley</h4>
+                    <hr class="testimonial-hr">
+                    <!--Quotation-->
+                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Happy Tales is amazing! Years of experience, AND they know-</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card " style="transform:translate(0,0);">
+                  <!--Background color-->
+                  <div class="card-up blue-gradient">
+                  </div>
+                  <!--Avatar-->
+                  <div class="avatar mx-auto white">
+                    <img src="../img/Testimonials/Gabrielle.jpg" class="rounded-circle img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <!--Name-->
+                    <h4 class="font-weight-bold mb-4" style="color:var(--mainBlue);">Gabrielle L.</h4>
+                    <hr class="testimonial-hr">
+                    <!--Quotation-->
+                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Ashley was very thorough and professional, making time to-</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card " style="transform:translate(0,0);">
+                  <!--Background color-->
+                  <div class="card-up info-color"></div>
+                  <!--Avatar-->
+                  <div class="avatar mx-auto white">
+                    <img src="../img/Testimonials/Lou.jpg" class="rounded-circle img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <!--Name-->
+                    <h4 class="font-weight-bold mb-4" style="color:var(--mainBlue);">Louella Jacobs</h4>
+                    <hr class="testimonial-hr">
+                    <!--Quotation-->
+                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Ashley did an amazing job for us! I highly recommend her.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card " style="transform:translate(0,0);">
+                  <!--Background color-->
+                  <div class="card-up indigo"></div>
+                  <!--Avatar-->
+                  <div class="avatar mx-auto white">
+                    <img src="../img/Testimonials/Vickie.jpg" class="rounded-circle img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <!--Name-->
+                    <h4 class="font-weight-bold mb-4" style="color:var(--mainBlue);">Vickie Riker</h4>
+                    <hr class="testimonial-hr">
+                    <!--Quotation-->
+                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>I highly recommend Ashley! She has cared for our pet pot belly pig on-</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card " style="transform:translate(0,0);">
+                  <!--Background color-->
+                  <div class="card-up blue-gradient">
+                  </div>
+                  <!--Avatar-->
+                  <div class="avatar mx-auto white">
+                    <img src="../img/Testimonials/Laura.jpg" class="rounded-circle img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <!--Name-->
+                    <h4 class="font-weight-bold mb-4" style="color:var(--mainBlue);">
+                      Laura Carroll
+                    </h4>
+                    <hr class="testimonial-hr">
+                    <!--Quotation-->
+                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2">
+                      </i>Happy to recommend Ashley! She did a great job watching my
+                      two Westies.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card " style="transform:translate(0,0);">
+                  <!--Background color-->
+                  <div class="card-up info-color"></div>
+                  <!--Avatar-->
+                  <div class="avatar mx-auto white">
+                    <img src="../img/Testimonials/MichaelEaganAvatar.jpg" class="rounded-circle img-fluid">
+                  </div>
+                  <div class="card-body">
+                    <!--Name-->
+                    <h4 class="font-weight-bold mb-4" style="color:var(--mainBlue);">
+                      Michael Eagan
+                    </h4>
+                    <hr class="testimonial-hr">
+                    <!--Quotation-->
+                    <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2">
+                      </i>We discovered Ashley's service this summer
+                      and have used her ever since.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#galleryControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#galleryControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="d-flex justify-content-center gallery-button">
+            <a href="html/gallery.html" class="bttn-float bttn-lg bttn-jumbo">Gallery</a>
+          </div>
+        </div>
+        <!-- END OF Testimonials MOBILE-->
       <!-- END OF Testimonials-->
 
         <!-- Call To Action Div-->
