Made Services and Rates page mobile friendly

--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -86,7 +86,7 @@
 
         <!--Services Cards-->
         <div class="flex-container services__container">
-            <div class="row">
+            <div class="row services-row-1">
                 <div class="col-md">
                     <img src="../img/Services Cards/services-img-1.jpg"/>
                 </div>
@@ -97,29 +97,50 @@
                     <p>With a daily dog walker, you don’t have to worry as much if you need to stay late for work, or if your dog doesn’t completely “finish” when you take them out in the morning.</p>
                     <br>
                     <p>Our walks at Happy Tales Pet Care are led by a professionally trained dog walker who has your pup’s best interest in mind. We provide daily check-ins as well!</p>
-                    <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Dog Walk Around Neighborhood</p>
-                    <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Dog Walk Around Neighborhood</p>
-                    <p class="services-card__rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Dog Walk Around Neighborhood</p>
-                    <p class="services-card__rate services-card__rate-last" style="text-align: left;"><span class="accent">$5</span> &emsp;&emsp;&emsp;&emsp;&emsp; For each additional dog</p>
+                    <div class="services-card-rates">
+                        <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Dog Walk Around Neighborhood</p>
+                        <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Dog Walk Around Neighborhood</p>
+                        <p class="services-card__rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Dog Walk Around Neighborhood</p>
+                        <p class="services-card__rate services-card__rate-last"><span class="accent">$5</span> &emsp;&emsp;&emsp;&emsp;&emsp; For each additional dog</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row pet-sitting-xl services-row-2">
                 <div class="col-md services-card__text">
                     <h3 class="services-card__text-title">Pet Sitting</h3>
                     <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
                     <br>
                     <p>We create customized care plans that meet the needs of our clients and their pets. We will come visit your precious pets while you are away and give them all of our love and attention. While we are there, we make sure your house is taken care of by: cleaning the litter box for your cat, walking your pup, watering plants, picking up mail, adjusting the lights, and feeding and administering medication. We will send you regular check-ins to let you know how things are going!</p>
-                    <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drop-By Visit</p>
-                    <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drop-By Visit</p>
-                    <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drop-By Visit</p>
+                    <div class="services-card-rates">
+                        <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drop-By Visit</p>
+                        <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drop-By Visit</p>
+                        <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drop-By Visit</p>
+                    </div>
                 </div>
-                <div class="col-md">
+                <div class="col-md pet-sitting__img">
                     <img src="../img/Services Cards/services-img-2.jpg"/>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row pet-sitting-mobile">
+                <div class="col-md pet-sitting__img">
+                    <img src="../img/Services Cards/services-img-2.jpg"/>
+                </div>
+                <div class="col-md services-card__text">
+                    <h3 class="services-card__text-title">Pet Sitting</h3>
+                    <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
+                    <br>
+                    <p>We create customized care plans that meet the needs of our clients and their pets. We will come visit your precious pets while you are away and give them all of our love and attention. While we are there, we make sure your house is taken care of by: cleaning the litter box for your cat, walking your pup, watering plants, picking up mail, adjusting the lights, and feeding and administering medication. We will send you regular check-ins to let you know how things are going!</p>
+                    <div class="services-card-rates">
+                        <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drop-By Visit</p>
+                        <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drop-By Visit</p>
+                        <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drop-By Visit</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row services-row-3">
                 <div class="col-md">
                     <img src="../img/Services Cards/services-img-3.jpg"/>
                 </div>
@@ -127,9 +148,11 @@
                     <h3 class="services-card__text-title">Other Critters</h3>
                     <p class="services-card__text-lead-p" style="margin-top: 60px;">We have experience handling multiple different critters; everything from pigs, rabbits, fish, bird, chickens, etc. If you aren't sure if we provide a service for your critter, feel free to send us a message in the <a href="contact.html">Contact Us</a> page. </p>
                     <br>
-                    <p class="services-card__rate" style="margin-top: 140px;"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drive-By Visit</p>
-                    <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drive-By Visit</p>
-                    <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drive-By Visit</p>
+                    <div class="services-card-rates">
+                        <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drive-By Visit</p>
+                        <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drive-By Visit</p>
+                        <p class="services-card__rate three-level-rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Drive-By Visit</p>
+                    </div>
                 </div>
             </div>
         </div>
