Made Let's Meet page mobile responsive

--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -172,12 +172,14 @@
                             prior to the Meet & Greet, the meeting might run upwards of an hour.
                         </p>
                     </div>
-                    <div class="d-flex justify-content-center schedule-form_download-docs-column__buttons">
-                        <div class="schedule-form__download-docs-column__client-info">
-                            <a href="../docs/Client Pet Information.html" target="_blank" class="bttn-float bttn-lg bttn-jumbo" download>Client/Pet Information</a>
-                        </div>
-                        <div class="schedule-form__download-docs-column__contract">
-                            <a href="../docs/Contract and Service Considerations.pdf" target="_blank" class="bttn-float bttn-lg bttn-jumbo">Contract Agreement</a>
+                    <div class="container d-flex justify-content-center schedule-form_download-docs-column__buttons">
+                        <div class="row">
+                            <div class="schedule-form__download-docs-column__client-info col-6">
+                                <a href="../docs/Client Pet Information.html" target="_blank" class="bttn-float bttn-lg bttn-jumbo" download>Client/Pet Information</a>
+                            </div>
+                            <div class="schedule-form__download-docs-column__contract col-6">
+                                <a href="../docs/Contract and Service Considerations.pdf" target="_blank" class="bttn-float bttn-lg bttn-jumbo">Contract Agreement</a>
+                            </div>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center schedule-form__download-docs-column__map-text">
@@ -189,7 +191,7 @@
                     </div>
                     <div class="row d-flex justify-content-center">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729511.5797693656!2d-84.80110645733522!3d44.419732795145535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8820f753dd309057%3A0xcab1dd7828e7fc6f!2sHappy+Tales+Pet+Care!5e0!3m2!1sen!2sus!4v1556474954205!5m2!1sen!2sus" 
-                                width="550" height="430" frameborder="0" style="border:0" allowfullscreen>
+                                width="350" height="430" frameborder="0" style="border:0" allowfullscreen>
                         </iframe>
                     </div>
                 </div>
