--- a/html/contact.html
+++ b/html/contact.html
@@ -88,13 +88,13 @@
             </p>
         </div>
         <!-- END OF Intro Text -->
-        
+        <div class="styled-br message-us-br"></div>
         <!-- Get In Touch Section-->
         <div class="container-fluid get-in-touch__container">
             <div class="row get-in-touch__row">
                 <div class="col-md get-in-touch__message-us">
                     <div class="d-flex justify-content-center"><h3> Message Us </h3></div>
-                    <div class="d-flex justify-content-center"><p>Please fill out this form and we will be in touch!</p></div>
+                <div class="d-flex justify-content-center"><p class="get-in-touch__message-us-subtitle">Please fill out this form and we will be in touch!</p></div>
                     <div class="get-in-touch__form">
                         <form action="https://formspree.io/xqkdwajy" method="POST">
                             <div class="form-group">
