Removed dynamic navbar effect

--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -175,7 +175,7 @@
                     <div class="container d-flex justify-content-center schedule-form_download-docs-column__buttons">
                         <div class="row">
                             <div class="schedule-form__download-docs-column__client-info col-6">
-                                <a href="../docs/Client Pet Information.html" target="_blank" class="bttn-float bttn-lg bttn-jumbo" download>Client/Pet Information</a>
+                                <a href="../docs/Pet Information.docx" target="_blank" class="bttn-float bttn-lg bttn-jumbo" download>Client/Pet Information</a>
                             </div>
                             <div class="schedule-form__download-docs-column__contract col-6">
                                 <a href="../docs/Contract and Service Considerations.pdf" target="_blank" class="bttn-float bttn-lg bttn-jumbo">Contract Agreement</a>
