fixed image closing tag

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container in-home-care__container">
           <div class="row">
             <div class="col-md in-home-care__media">
-              <img src="img/card-cat.jpg" alt="Human touching palms with small kitten">
+              <img src="img/card-cat.jpg" alt="Human touching palms with small kitten"/>
             </div>
             <div class="col-md in-home-care__text">
               <div class="d-flex justify-content-center in-home-care__text-dog-photo">
