fixed testimonial link on index page

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <h3>Trusted and Friendly</h3>
               <div class="styled-br"></div>
               <p>
-                We have been doing this for years, and our clients can tell!  Head over to our <a href="html/aboutus.html/#testimonials">Testimonials</a>
+                We have been doing this for years, and our clients can tell!  Head over to our <a href="html/aboutus.html#testimonials">Testimonials</a>
                 to see what others are saying!
               </p>
             </div>
