Finished mobile responsive design

--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -76,7 +76,7 @@
         <!-- Intro Text-->
         <div class="intro-text__container">
             <div class="intro-text__quote d-flex justify-content-center">
-                <p class="intro-text__quote-p">"If the kindest souls were gifted with the longest lives, dogs would outlive us all."<br> <span class="accent">Ricky Gervais</span></p>
+                <p class="intro-text__quote-p">"If the kindest souls were gifted with the longest lives, dogs would outlive us all."</p>
             </div>
             <div class="intro-text__subtitle d-flex justify-content-center">
                 <p class="intro-text__subtitle-p">At Happy Tales we provide a wide range of customizable pet care services. If you don't see exactly what you are looking for or if you have any questions, feel free to send us a message on the <a href="contact.html">Contact Us</a> page. If you would like to check out our cancellation policy go to our <a href="faq.html">Frequently Asked Questions</a> page.</p>
@@ -91,16 +91,18 @@
                     <img src="../img/Services Cards/services-img-1.jpg"/>
                 </div>
                 <div class="col-md services-card__text">
-                    <h3 class="services-card__text-title">Dog Walking</h3>
-                    <p class="services-card__text-lead-p">Do you have to leave early for work and need a midday dog walk? Work long hours? Traveling? Hiring a professional dog walker gives you the peace of mind that your dog is well taken care of, even when you aren’t at home.</p>
-                    <br>
-                    <p>With a daily dog walker, you don’t have to worry as much if you need to stay late for work, or if your dog doesn’t completely “finish” when you take them out in the morning.</p>
-                    <br>
-                    <p>Our walks at Happy Tales Pet Care are led by a professionally trained dog walker who has your pup’s best interest in mind. We provide daily check-ins as well!</p>
+                    <div class="services-card__text-text">
+                        <h3 class="services-card__text-title">Dog Walking</h3>
+                        <p class="services-card__text-lead-p">Do you have to leave early for work and need a midday dog walk? Work long hours? Traveling? Hiring a professional dog walker gives you the peace of mind that your dog is well taken care of, even when you aren’t at home.</p>
+                        <br>
+                        <p>With a daily dog walker, you don’t have to worry as much if you need to stay late for work, or if your dog doesn’t completely “finish” when you take them out in the morning.</p>
+                        <br>
+                        <p>Our walks at Happy Tales Pet Care are led by a professionally trained dog walker who has your pup’s best interest in mind. We provide daily check-ins as well!</p>
+                    </div>
                     <div class="services-card-rates">
-                        <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Dog Walk Around Neighborhood</p>
-                        <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Dog Walk Around Neighborhood</p>
-                        <p class="services-card__rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Dog Walk Around Neighborhood</p>
+                        <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Dog Walk</p>
+                        <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Dog Walk</p>
+                        <p class="services-card__rate"><span class="accent">$30</span> &emsp;&emsp;&emsp;&emsp; 60 Minute Dog Walk</p>
                         <p class="services-card__rate services-card__rate-last"><span class="accent">$5</span> &emsp;&emsp;&emsp;&emsp;&emsp; For each additional dog</p>
                     </div>
                 </div>
@@ -108,10 +110,12 @@
 
             <div class="row pet-sitting-xl services-row-2">
                 <div class="col-md services-card__text">
-                    <h3 class="services-card__text-title">Pet Sitting</h3>
-                    <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
-                    <br>
-                    <p>We create customized care plans that meet the needs of our clients and their pets. We will come visit your precious pets while you are away and give them all of our love and attention. While we are there, we make sure your house is taken care of by: cleaning the litter box for your cat, walking your pup, watering plants, picking up mail, adjusting the lights, and feeding and administering medication. We will send you regular check-ins to let you know how things are going!</p>
+                    <div class="services-card__text-text">
+                        <h3 class="services-card__text-title">Pet Sitting</h3>
+                        <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
+                        <br>
+                        <p>We create customized care plans that meet the needs of our clients and their pets. We will come visit your precious pets while you are away and give them all of our love and attention. While we are there, we make sure your house is taken care of by: cleaning the litter box for your cat, walking your pup, watering plants, picking up mail, adjusting the lights, and feeding and administering medication. We will send you regular check-ins to let you know how things are going!</p>
+                    </div>
                     <div class="services-card-rates">
                         <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drop-By Visit</p>
                         <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drop-By Visit</p>
@@ -128,10 +132,12 @@
                     <img src="../img/Services Cards/services-img-2.jpg"/>
                 </div>
                 <div class="col-md services-card__text">
-                    <h3 class="services-card__text-title">Pet Sitting</h3>
-                    <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
-                    <br>
-                    <p>We create customized care plans that meet the needs of our clients and their pets. We will come visit your precious pets while you are away and give them all of our love and attention. While we are there, we make sure your house is taken care of by: cleaning the litter box for your cat, walking your pup, watering plants, picking up mail, adjusting the lights, and feeding and administering medication. We will send you regular check-ins to let you know how things are going!</p>
+                    <div class="services-card__text-text">
+                        <h3 class="services-card__text-title">Pet Sitting</h3>
+                        <p class="services-card__text-lead-p">Heading out on vacation? Travel stress-free knowing your fur baby is in loving hands! With over 12 years of pet care experience, we understand how hard it is to find a reliable pet sitter.</p>
+                        <br>
+                        <p>We create customized care plans that meet the needs of our clients and their pets. We will come visit your precious pets while you are away and give them all of our love and attention. While we are there, we make sure your house is taken care of by: cleaning the litter box for your cat, walking your pup, watering plants, picking up mail, adjusting the lights, and feeding and administering medication. We will send you regular check-ins to let you know how things are going!</p>
+                    </div>
                     <div class="services-card-rates">
                         <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drop-By Visit</p>
                         <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drop-By Visit</p>
@@ -145,9 +151,11 @@
                     <img src="../img/Services Cards/services-img-3.jpg"/>
                 </div>
                 <div class="col-md services-card__text">
-                    <h3 class="services-card__text-title">Other Critters</h3>
-                    <p class="services-card__text-lead-p" style="margin-top: 60px;">We have experience handling multiple different critters; everything from pigs, rabbits, fish, bird, chickens, etc. If you aren't sure if we provide a service for your critter, feel free to send us a message in the <a href="contact.html">Contact Us</a> page. </p>
-                    <br>
+                    <div class="services-card__text-text">
+                        <h3 class="services-card__text-title">Other Critters</h3>
+                        <p class="services-card__text-lead-p" style="margin-top: 60px;">We have experience handling multiple different critters; everything from pigs, rabbits, fish, bird, chickens, etc. If you aren't sure if we provide a service for your critter, feel free to send us a message in the <a href="contact.html">Contact Us</a> page. </p>
+                        <br>
+                    </div>
                     <div class="services-card-rates">
                         <p class="services-card__rate"><span class="accent">$20</span> &emsp;&emsp;&emsp;&emsp; 30 Minute Drive-By Visit</p>
                         <p class="services-card__rate"><span class="accent">$25</span> &emsp;&emsp;&emsp;&emsp; 45 Minute Drive-By Visit</p>
